--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,22 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-    <title>Client Purchase Calculator</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-<p>Get your calculator <a href="/calcDemo">here</a></p>
+
+<form class="w3-container w3-card-4" action="/action_page.php">
+    <h1>Select Your Free Option</h1>
+
+    <select class="w3-select" name="option">
+        <option value="" disabled selected>Choose your option</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+    </select>
+
+    <p><button class="w3-btn w3-teal">Register</button></p>
+</form>
+
 </body>
 </html>
